--- a/site.yml
+++ b/site.yml
@@ -951,6 +951,7 @@
               - path:        CategoricalTowers/GradedCategories
               - path:              CAP_project/GradedModulePresentationsForCAP
               - path:              CAP_project/GroupRepresentationsForCAP
+              - path:                          HeckeCategories
               - path:              CAP_project/HomologicalAlgebraForCAP
               - path: HigherHomologicalAlgebra/HomotopyCategories
               - path:              CAP_project/InternalExteriorAlgebraForCAP
