--- a/tasks/package_common.yml
+++ b/tasks/package_common.yml
@@ -26,7 +26,7 @@
   lineinfile:
     path: "{{ pkg_dir }}/{{ package.path }}/PackageInfo.g"
     regexp: "Date :="
-    line: 'Date := Concatenation( "01/", ~.Version{[ 6, 7 ]}, "/", ~.Version{[ 1 .. 4 ]} ),'
+    line: 'Date := (function ( ) if IsBound( GAPInfo.SystemEnvironment.GAP_PKG_RELEASE_DATE ) then return GAPInfo.SystemEnvironment.GAP_PKG_RELEASE_DATE; else return Concatenation( ~.Version{[ 1 .. 4 ]}, "-", ~.Version{[ 6, 7 ]}, "-01" ); fi; end)( ),'
 
 - name: PackageInfo.g URLs
   blockinfile:
