--- a/site.yml
+++ b/site.yml
@@ -128,11 +128,14 @@
               \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
               \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+              \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
             tests_additional_packages_to_load:
-              - Algebroids
+              - Toposes
+              - FreydCategoriesForCAP
+              - FunctorCategories
               - LazyCategories
             tests_only_basic: true
             tests_without_precompiled_code: true
