--- a/site.yml
+++ b/site.yml
@@ -38,12 +38,16 @@
             has_HOMALG_IO: true
             doc_additional_latex_preamble: |
               \usepackage{mathtools}
+              \usepackage{tikz-cd}
               \DeclareUnicodeCharacter{2205}{\ensuremath{\emptyset}}
               \DeclareUnicodeCharacter{2C76}{\ensuremath{\vdash}\!\!}
               \DeclareUnicodeCharacter{2192}{\ensuremath{\!\!\rightarrow\!}}
               \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
               \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+              \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
+              \DeclareUnicodeCharacter{2022}{\ensuremath{\bullet}}
+              \DeclareUnicodeCharacter{2297}{\ensuremath{\otimes}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
