added new package MatrixCategories

--- a/site.yml
+++ b/site.yml
@@ -1,4 +1,25 @@
 ---
+- name: MatrixCategories
+  hosts: MatrixCategories
+  connection: local
+  vars:
+    pkg_dir: "~/.gap/pkg/"
+  tasks:
+    - import_tasks: tasks/package.yml
+      vars:
+        package:
+          name: MatrixCategories
+          description: "Categories of finite dimensional matrices over rings"
+          has_HOMALG_IO: true
+          doc_additional_latex_preamble: |
+            \usepackage{mathtools}
+          needed_other_repositories:
+            - homalg_project
+            - CAP_project
+          tests_additional_packages_to_load:
+            - IO_ForHomalg
+          tests_only_basic: true
+
 - name: HeckeCategories
   hosts: HeckeCategories
   connection: local
