part of https://github.com/homalg-project/CategoricalTowers/pull/216

--- a/site.yml
+++ b/site.yml
@@ -182,6 +182,7 @@
               \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
               \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
               \DeclareUnicodeCharacter{21A6}{\ensuremath{\mapsto}}
+              \DeclareUnicodeCharacter{227B}{\ensuremath{\succ}}
             tests_additional_packages_to_load:
               - FreydCategoriesForCAP
               - Toposes
