--- a/site.yml
+++ b/site.yml
@@ -265,6 +265,7 @@
               \usepackage{mathtools}
               \DeclareUnicodeCharacter{22A4}{\ensuremath{\top}}
               \DeclareUnicodeCharacter{22A5}{\ensuremath{\bot}}
+              \DeclareUnicodeCharacter{21D2}{\ensuremath{\Rightarrow}}
             needed_other_repositories:
               - homalg_project
               - CAP_project
