added Locales to the list of required packages by HigherHomologicalAlgebra

--- a/site.yml
+++ b/site.yml
@@ -590,6 +590,7 @@
           - FunctorCategories
           - SubcategoriesForCAP
           - CategoryConstructor
+          - Locales
 
 - name: CAP_project
   hosts: CAP_project
