Test ZXCalculusForCAP without precompiled code

--- a/site.yml
+++ b/site.yml
@@ -472,6 +472,7 @@
             - HigherHomologicalAlgebra
             - QPA2
             - CategoricalTowers
+          tests_without_precompiled_code: true
 
 - name: HigherHomologicalAlgebra
   hosts: HigherHomologicalAlgebra
