added ComplexesCategories to tests_additional_packages_to_load for FunctorCategories

--- a/site.yml
+++ b/site.yml
@@ -176,6 +176,7 @@
               - FreydCategoriesForCAP
               - Toposes
               - Locales
+              - ComplexesCategories
             tests_only_basic: true
             has_subsplit: true
           - name: GradedCategories
