Load json in tests of ZXCalculusForCAP

--- a/site.yml
+++ b/site.yml
@@ -469,6 +469,7 @@
             - Toposes
             - FreydCategoriesForCAP
             - FunctorCategories
+            - json
           needed_other_repositories:
             - homalg_project
             - CAP_project
